css/style.css
html, body {
  height: 100%;
}

body {
  /* https://puu.sh/zw040/ef3bf84042.png Colour Scheme */
  background-color: #252830;
  color: #ECEEEC;
  font-family: 'Open Sans', sans-serif;
}

h2 {
  font-family: 'Roboto', sans-serif;
}

#ajax-spinner {
  left: 50%;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: 1;
}

.answerPercent {
  font-size: 116px;
}

.bg-worldmap {
  background-image: url(../img/worldmap.svg);
  background-position: center;
  background-repeat: repeat-x;
  bottom: 0;
  height: 100%;
  left: 0;
  opacity: 0.012;
  position: absolute;
  right: 0;
  top: 0;
  /*adjust s value for speed*/

}

@media (min-width: 1024px) {
	/* Only do logo animation on desktop, otherwise don't bother */
	.bg-worldmap { animation: animatedBackground 500s linear infinite; }
}

@keyframes animatedBackground {
  from {
    background-position: 0 0;
  }
/*use negative width if you want it to flow right to left else and positive for left to right*/
  to {
    background-position: -10000px 0;
  }
}

.button-back {
  font-size: 36px;
  opacity: 0.25;
  text-decoration: none;
}

.button-back:hover {
  opacity: 1.0;
}

.flipcard {
  position: relative;
  width: 280px;
  height: 400px;
  perspective: 800px;
}
.flipcard.flip .front {
  transform: rotateY(180deg);
}
.flipcard.flip .back {
  transform: rotateY(0deg);
}
.flipcard .back{
  transform: rotateY(-180deg);
}
.flipcard .front, .flipcard .back
{
  left: -51px;
  background-color: #428bca;
  border: 1px solid #222;
  border-radius: 5px;
  box-shadow: 0 5px 15px rgba(0,0,0,.5);

  position:absolute;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  transition: all 1s ease 0s;
  color: white;
  padding: 15px 40px;
  backface-visibility: hidden;
  margin: 15px 50px 0;
}

.footer {
  bottom: 0;
  height: 60px;
  line-height: 60px;
  position: absolute;
  width: 100%;
}

.review-button {
  max-width: 33%;
  min-width: 260px;
  width: 352px;
}

.smooth-transition {
  flex-grow: 1;
  transition: all 400ms ease;
}

.sticky-top {
  top: -5px;
}

.table td, .table th {
  word-break: break-all;
}

.table .thead-dark th {
  border-bottom: 1px solid #212529;
  border-top: 1px solid #212529;
}

.question-text {
  font-size: 4em;
}

.speaker {
  background: transparent;
  border: none;
  color: #37474F;
  font-size: 100px;
}

.speaker:hover {
  cursor: pointer;
}

.tts-flashcards {
  font-size: 40px;
  position: absolute;
  right: 0;
  top: 0;
}

button:focus { outline:0; text-decoration: none; }

.can_spinner {
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
      -ms-transform: translate(-50%,-50%);
          transform: translate(-50%,-50%);
}

::-webkit-scrollbar {
  background-color: #F5F5F5;
  border-radius: 10px;
  width: 12px;
}

::-webkit-scrollbar-thumb {
  background-color: #555;
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
}

::-webkit-scrollbar-track {
  background-color: #F5F5F5;
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

@keyframes lds-radio {
  0% {
    opacity: 0;
  }
  20% {
    opacity: 1;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes lds-radio {
  0% {
    opacity: 0;
  }
  20% {
    opacity: 1;
  }
  100% {
    opacity: 1;
  }
}

.lds-radio {
  position: relative;
}

.lds-radio div {
  position: absolute;
}

.lds-radio div:nth-child(1) {
  width: 44px;
  height: 44px;
  left: 34px;
  top: 128px;
  border-radius: 50%;
  background: #eceeec;
  -webkit-animation: lds-radio 1s linear infinite;
  animation: lds-radio 1s linear infinite;
}

.lds-radio div:nth-child(2) {
  width: 66px;
  height: 66px;
  left: 56px;
  top: 84px;
  border-radius: 0 66px 0 0;
  border: 20px solid #8b888d;
  background: none;
  -webkit-animation: lds-radio 1s linear infinite;
  animation: lds-radio 1s linear infinite;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
  border-bottom: 0;
  border-left: 0;
}

.lds-radio div:nth-child(3) {
  width: 110px;
  height: 110px;
  left: 56px;
  top: 40px;
  border-radius: 0 110px 0 0;
  border: 20px solid #f43b54;
  background: none;
  -webkit-animation: lds-radio 1s linear infinite;
  animation: lds-radio 1s linear infinite;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
  border-bottom: 0;
  border-left: 0;
}

.lds-radio {
  width: 200px !important;
  height: 200px !important;
  -webkit-transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
  transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
}

@keyframes lds-spinner {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
@-webkit-keyframes lds-spinner {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
.lds-spinner {
  position: relative;
}
.lds-spinner div {
  left: 94px;
  top: 48px;
  position: absolute;
  -webkit-animation: lds-spinner linear 1s infinite;
  animation: lds-spinner linear 1s infinite;
  background: #337ab7;
  width: 12px;
  height: 24px;
  border-radius: 40%;
  -webkit-transform-origin: 6px 52px;
  transform-origin: 6px 52px;
}
.lds-spinner div:nth-child(1) {
  -webkit-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation-delay: -0.916666666666667s;
  animation-delay: -0.916666666666667s;
}
.lds-spinner div:nth-child(2) {
  -webkit-transform: rotate(30deg);
  transform: rotate(30deg);
  -webkit-animation-delay: -0.833333333333333s;
  animation-delay: -0.833333333333333s;
}
.lds-spinner div:nth-child(3) {
  -webkit-transform: rotate(60deg);
  transform: rotate(60deg);
  -webkit-animation-delay: -0.75s;
  animation-delay: -0.75s;
}
.lds-spinner div:nth-child(4) {
  -webkit-transform: rotate(90deg);
  transform: rotate(90deg);
  -webkit-animation-delay: -0.666666666666667s;
  animation-delay: -0.666666666666667s;
}
.lds-spinner div:nth-child(5) {
  -webkit-transform: rotate(120deg);
  transform: rotate(120deg);
  -webkit-animation-delay: -0.583333333333333s;
  animation-delay: -0.583333333333333s;
}
.lds-spinner div:nth-child(6) {
  -webkit-transform: rotate(150deg);
  transform: rotate(150deg);
  -webkit-animation-delay: -0.5s;
  animation-delay: -0.5s;
}
.lds-spinner div:nth-child(7) {
  -webkit-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-animation-delay: -0.416666666666667s;
  animation-delay: -0.416666666666667s;
}
.lds-spinner div:nth-child(8) {
  -webkit-transform: rotate(210deg);
  transform: rotate(210deg);
  -webkit-animation-delay: -0.333333333333333s;
  animation-delay: -0.333333333333333s;
}
.lds-spinner div:nth-child(9) {
  -webkit-transform: rotate(240deg);
  transform: rotate(240deg);
  -webkit-animation-delay: -0.25s;
  animation-delay: -0.25s;
}
.lds-spinner div:nth-child(10) {
  -webkit-transform: rotate(270deg);
  transform: rotate(270deg);
  -webkit-animation-delay: -0.166666666666667s;
  animation-delay: -0.166666666666667s;
}
.lds-spinner div:nth-child(11) {
  -webkit-transform: rotate(300deg);
  transform: rotate(300deg);
  -webkit-animation-delay: -0.083333333333333s;
  animation-delay: -0.083333333333333s;
}
.lds-spinner div:nth-child(12) {
  -webkit-transform: rotate(330deg);
  transform: rotate(330deg);
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}
.lds-spinner {
  width: 200px !important;
  height: 200px !important;
  -webkit-transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
  transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
}

